--- a/packages/api/.env.example
+++ b/packages/api/.env.example
@@ -1,3 +1,4 @@
+BACKEND_BASE_URL=https://ocean-systems.uc.r.appspot.com/
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=!ChangeMe!
 POSTGRES_HOST=localhost
