--- a/packages/website/.env.example
+++ b/packages/website/.env.example
@@ -15,3 +15,7 @@ REACT_APP_CARTO_API_KEY=
 
 # Mapbox token to access custom styles
 REACT_APP_MAPBOX_ACCESS_TOKEN=
+
+# Mapbox API Base URL
+# Proposed value: "https://api.mapbox.com/geocoding/v5/mapbox.places/"
+REACT_APP_MAPBOX_BASE_URL=
