--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ jobs:
 
       - image: postgres:12.2
         environment:
-          POSTGRES_PASSWORD: 'CHANGE-ME'
+          POSTGRES_PASSWORD: "CHANGE-ME"
         name: postgres
 
     working_directory: ~/repo
@@ -37,7 +37,6 @@ jobs:
             - node_modules
             - packages/website/node_modules
             - packages/api/node_modules
-            - packages/application/node_modules
             - /usr/local/share/.cache/yarn/v4/
           key: v1-dependencies-{{ checksum "yarn.lock" }}
 
