Introduce handle drawer

--- a/.eslintrc
+++ b/.eslintrc
@@ -92,7 +92,7 @@
       }
     ],
     "no-unused-vars": [
-      "error",
+      "warn",
       {
         "argsIgnorePattern": "^props$",
         "ignoreRestSiblings": true
