--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -57,6 +57,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-slick": "^0.27.10",
+    "react-swipeable-bottom-sheet": "^1.1.2",
     "react-swipeable-views": "^0.13.9",
     "redux": "^4.0.5",
     "redux-mock-store": "^1.5.4",
