--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -52,11 +52,13 @@
     "@nestjs/schedule": "^0.4.1",
     "@nestjs/typeorm": "^7.0.0",
     "@types/bluebird": "^3.5.32",
+    "@types/unzipper": "^0.10.3",
     "axios": "^0.19.2",
     "axios-retry": "^3.1.8",
     "bluebird": "^3.7.2",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
+    "csv-parse": "^4.15.1",
     "firebase-admin": "^9.0.0",
     "geo-tz": "^6.0.0",
     "geojson": "^0.5.0",
@@ -74,8 +76,11 @@
     "pg-native": "^3.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^6.5.4",
+    "ts-exif-parser": "^0.2.1",
     "typeorm": "^0.2.25",
-    "typeorm-naming-strategies": "^1.1.0"
+    "typeorm-naming-strategies": "^1.1.0",
+    "unzipper": "^0.10.11",
+    "xlsx": "^0.16.9"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.0.0",
@@ -91,6 +96,7 @@
     "@types/passport": "^1.0.4",
     "@types/passport-strategy": "^0.2.35",
     "@types/supertest": "^2.0.8",
+    "@types/unzipper": "^0.10.3",
     "csv-parser": "^2.3.3",
     "faker": "^4.1.0",
     "firebase-admin": "^9.0.0",
