--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -40,7 +40,8 @@
     "seed:run": "yarn typeorm-seeding seed",
     "daily-worker": "ts-node -r dotenv/config scripts/daily-update.ts",
     "backfill-data": "ts-node -r dotenv/config scripts/backfill-daily-data.ts",
-    "augment-reefs": "ts-node -r dotenv/config scripts/augment-reef-data.ts"
+    "augment-reefs": "ts-node -r dotenv/config scripts/augment-reef-data.ts",
+    "upload-hobo-data": "ts-node -r dotenv/config scripts/upload-hobo-data.ts"
   },
   "dependencies": {
     "@google-cloud/storage": "^5.3.0",
