--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,6 +27,8 @@ jobs:
             # fallback to using the latest cache if no exact match is found
             - v1-dependencies-
 
+      - run: sudo apt update
+      - run: sudo apt install -y libnetcdf-dev
       - run: yarn install --ignore-engines
       - run:
           name: Check yarn.lock
