--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,8 +27,8 @@ jobs:
             # fallback to using the latest cache if no exact match is found
             - v1-dependencies-
 
-      - run: apt-get install -y sudo
-      - run: sudo apt-get update
+      - run: apt update
+      - run: apt install -y sudo
       - run: sudo apt-get install -y libnetcdf-dev
       - run: yarn install --ignore-engines
       - run:
