--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ jobs:
 
       - run: apt update
       - run: apt install -y sudo
-      - run: sudo apt-get install -y libnetcdf-dev
+      - run: sudo apt install -y libnetcdf-dev
       - run: yarn install --ignore-engines
       - run:
           name: Check yarn.lock
