--- a/packages/api/.eslintrc
+++ b/packages/api/.eslintrc
@@ -18,7 +18,7 @@
       }
     },
     {
-      "files": ["scripts/*"],
+      "files": ["scripts/**"],
       "rules": {
         "no-console": "off",
         "import/no-extraneous-dependencies": [
