--- a/packages/website/.firebaserc
+++ b/packages/website/.firebaserc
@@ -10,6 +10,9 @@
         ],
         "prod-target": [
           "os-aqualink"
+        ],
+        "programize-target": [
+          "aqualink-app-programize"
         ]
       }
     }
