Add utility script to import historical daily NOAA SST (#486)
Co-authored-by: Antonios Valmas <avalmas@programize.com>

--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -58,6 +58,7 @@
     "bluebird": "^3.7.2",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
+    "csv-parse": "^4.15.1",
     "firebase-admin": "^9.0.0",
     "geo-tz": "^6.0.0",
     "geojson": "^0.5.0",
@@ -99,6 +100,7 @@
     "firebase-functions": "^3.8.0",
     "glob": "^7.1.6",
     "jest": "24.9.0",
+    "netcdf4": "https://github.com/parro-it/netcdf4",
     "nodemon": "^2.0.4",
     "rimraf": "^3.0.2",
     "supertest": "^4.0.2",
