--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -46,6 +46,7 @@
     "mutationobserver-shim": "^0.3.7",
     "react": "^16.13.1",
     "react-chartjs-2": "^2.9.0",
+    "react-csv": "^2.0.3",
     "react-dom": "^16.13.1",
     "react-dropzone": "^11.0.3",
     "react-ga": "^3.1.2",
