--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -95,6 +95,7 @@
     "@types/lodash": "^4.14.149",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
+    "@types/react-csv": "^1.1.1",
     "@types/react-dom": "^16.9.0",
     "@types/react-leaflet": "^2.5.1",
     "@types/react-redux": "^7.1.7",
