--- a/packages/api/Dockerfile
+++ b/packages/api/Dockerfile
@@ -5,11 +5,14 @@ RUN apt update
 RUN apt install -y sudo
 RUN sudo apt install -y libnetcdf-dev
 
+RUN yarn global add typescript
+RUN yarn global add ts-node
+
 # Run application
 ENV NODE_ENV=production
 WORKDIR /app
 
-# TODO - Find a way to get the yarn.lock which is "out of context".
+# TODO - Find a way to get the yarn.lock and parent tsconfig.json which are "out of context".
 # Because we are in a sub-package ity is at ../../yarn.lock
 COPY ["package.json", "./"]
 
