--- a/packages/api/docker-compose.yml
+++ b/packages/api/docker-compose.yml
@@ -11,3 +11,7 @@ services:
       POSTGRES_PASSWORD: '!ChangeMe!'
     volumes:
       - ./db_data:/var/lib/postgresql
+  app:
+    build: .
+    volumes:
+      - ./data:/data/
