--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -24,13 +24,13 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "@types/jsonwebtoken": "^8.5.0",
     "@typescript-eslint/eslint-plugin": "^2.23.0",
     "@typescript-eslint/parser": "^2.25.0",
     "axios": "^0.19.2",
     "chart.js": "^2.9.3",
     "chartjs-plugin-annotation": "^0.5.7",
     "classnames": "^2.2.6",
+    "download-csv": "^1.1.1",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "enzyme-to-json": "^3.4.4",
@@ -46,7 +46,6 @@
     "mutationobserver-shim": "^0.3.7",
     "react": "^16.13.1",
     "react-chartjs-2": "^2.9.0",
-    "react-csv": "^2.0.3",
     "react-dom": "^16.13.1",
     "react-dropzone": "^11.0.3",
     "react-ga": "^3.1.2",
@@ -92,10 +91,10 @@
     "@types/classnames": "^2.2.10",
     "@types/immutable": "^3.8.7",
     "@types/jest": "^24.0.0",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/lodash": "^4.14.149",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
-    "@types/react-csv": "^1.1.1",
     "@types/react-dom": "^16.9.0",
     "@types/react-leaflet": "^2.5.1",
     "@types/react-redux": "^7.1.7",
