--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -24,13 +24,13 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "@types/jsonwebtoken": "^8.5.0",
     "@typescript-eslint/eslint-plugin": "^2.23.0",
     "@typescript-eslint/parser": "^2.25.0",
     "axios": "^0.19.2",
     "chart.js": "^2.9.3",
     "chartjs-plugin-annotation": "^0.5.7",
     "classnames": "^2.2.6",
+    "download-csv": "^1.1.1",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "enzyme-to-json": "^3.4.4",
@@ -91,6 +91,7 @@
     "@types/classnames": "^2.2.10",
     "@types/immutable": "^3.8.7",
     "@types/jest": "^24.0.0",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/lodash": "^4.14.149",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
