--- a/packages/api/Dockerfile
+++ b/packages/api/Dockerfile
@@ -12,8 +12,8 @@ RUN yarn global add ts-node
 ENV NODE_ENV=production
 WORKDIR /app
 
-# TODO - Find a way to get the yarn.lock and parent tsconfig.json which are "out of context".
-# Because we are in a sub-package ity is at ../../yarn.lock
+# TODO - Find a way to get the yarn.lock which is "out of context".
+# Because we are in a sub-package it is located at ../../yarn.lock
 COPY ["package.json", "./"]
 
 RUN yarn install --production
