Some final fixes
Disable no-console rule on cloud-functions dir
Copy yarn.lock from root dir and include it on deploy Dockerfile
Clean up deploy scripts

--- a/packages/api/Dockerfile
+++ b/packages/api/Dockerfile
@@ -14,7 +14,7 @@ WORKDIR /app
 
 # TODO - Find a way to get the yarn.lock which is "out of context".
 # Because we are in a sub-package it is located at ../../yarn.lock
-COPY ["package.json", "./"]
+COPY ["package.json", "yarn.lock", "./"]
 
 RUN yarn install --production
 
