--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -10,9 +10,12 @@
     "build": "tsc -p tsconfig.build.json",
     "build:cloud-functions": "webpack-cli --config cloud-functions/webpack.config.js",
     "gcp-build": "npm install yarn",
-    "deploy:prod": "mv .env .env.bkp && cp .env.prod .env && yarn run build && gcloud app deploy && mv .env.bkp .env",
-    "deploy:staging": "mv .env .env.bkp && cp .env.staging .env && yarn run build && gcloud app deploy app-staging.yaml && mv .env.bkp .env",
-    "deploy:programize": "mv .env .env.bkp && cp .env.programize .env && yarn run build && gcloud app deploy app-programize.yaml && mv .env.bkp .env",
+    "predeploy:app": "mv .env .env.bkp && cp .env.${DEPLOY_ENV} .env && yarn run build && cp ../../yarn.lock .",
+    "deploy:app": "gcloud app deploy app-${DEPLOY_ENV}.yaml",
+    "postdeploy:app": "rm yarn.lock && mv .env.bkp .env",
+    "deploy:prod": "export DEPLOY_ENV=prod && yarn deploy:app",
+    "deploy:staging": "export DEPLOY_ENV=staging && yarn deploy:app",
+    "deploy:programize": "export DEPLOY_ENV=programize && yarn deploy:app",
     "deploy:cloud-functions": "yarn build:cloud-functions && firebase deploy --only functions:pingService,functions:scheduledDailyUpdate,functions:scheduledSpotterTimeSeriesUpdate",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "yarn run start:prod",
