--- a/packages/api/.eslintrc
+++ b/packages/api/.eslintrc
@@ -32,6 +32,7 @@
     {
       "files": ["cloud-functions/*"],
       "rules": {
+        "no-console": "off",
         "import/no-extraneous-dependencies": [
           "error",
           {
