--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -56,6 +56,7 @@
     "@nestjs/passport": "^7.1.0",
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/schedule": "^0.4.1",
+    "@nestjs/swagger": "^4.8.0",
     "@nestjs/typeorm": "^7.0.0",
     "@types/bluebird": "^3.5.32",
     "axios": "^0.19.2",
@@ -81,6 +82,7 @@
     "pg-native": "^3.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^6.5.4",
+    "swagger-ui-express": "^4.1.6",
     "ts-exif-parser": "^0.2.1",
     "typeorm": "^0.2.25",
     "typeorm-naming-strategies": "^1.1.0",
