--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -30,6 +30,7 @@
     "chart.js": "^2.9.3",
     "chartjs-plugin-annotation": "^0.5.7",
     "classnames": "^2.2.6",
+    "date-fns-tz": "^1.1.3",
     "download-csv": "^1.1.1",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
