--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -16,7 +16,7 @@
     "deploy:prod": "export DEPLOY_ENV=prod && yarn deploy:app",
     "deploy:staging": "export DEPLOY_ENV=staging && yarn deploy:app",
     "deploy:programize": "export DEPLOY_ENV=programize && yarn deploy:app",
-    "deploy:cloud-functions": "yarn build:cloud-functions && firebase deploy --only functions:pingService,functions:scheduledDailyUpdate,functions:scheduledSpotterTimeSeriesUpdate",
+    "deploy:cloud-functions": "yarn build:cloud-functions && firebase deploy --only functions:pingService,functions:scheduledDailyUpdate,functions:scheduledSpotterTimeSeriesUpdate,functions:scheduledSSTTimeSeriesUpdate",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "yarn run start:prod",
     "start:dev": "cp .env.local .env && nodemon --config nodemon.json",
