--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -67,6 +67,9 @@
     "typescript": "~3.8.2",
     "validator": "^13.1.1"
   },
+  "resolutions": {
+    "terser": "3.14.1"
+  },
   "jest": {
     "snapshotSerializers": [
       "enzyme-to-json/serializer"
