Remove unnecessary data filtering (#526)
Co-authored-by: Eric Boucher <eric.p.boucher@gmail.com>

--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -67,6 +67,9 @@
     "typescript": "~3.8.2",
     "validator": "^13.1.1"
   },
+  "resolutions": {
+    "terser": "3.16.1"
+  },
   "jest": {
     "snapshotSerializers": [
       "enzyme-to-json/serializer"
