--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -67,6 +67,8 @@
     "typescript": "~3.8.2",
     "validator": "^13.1.1"
   },
+    "terser": "4.6.13"
+  },
   "jest": {
     "snapshotSerializers": [
       "enzyme-to-json/serializer"
@@ -104,8 +106,8 @@
     "@types/react-swipeable-views": "^0.13.0",
     "@types/redux-mock-store": "^1.0.2",
     "@types/validator": "^13.1.0",
-    "dotenv-cli": "^4.0.0",
     "canvas": "^2.6.1",
-    "cross-env": "^7.0.2"
+    "cross-env": "^7.0.2",
+    "dotenv-cli": "^4.0.0"
   }
 }
