Add migration step

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -58,3 +58,6 @@ jobs:
       # Ensure that a normal build succeeds
       - run: yarn build
       - run: cd packages/api && yarn build:cloud-functions
+
+      # Ensure that all migrations succeed
+      - run: cd packages/api && yarn migration:run
