--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,8 +10,10 @@ jobs:
         environment:
           DATABASE_URL: postgres://postgres:CHANGE-ME@postgres:5432/postgres
 
-      - image: postgres:12.2
+      - image: kartoza/postgis:12.1
         environment:
+          POSTGRES_USER: postgres
+          POSTGRES_DB: postgres
           POSTGRES_PASSWORD: "CHANGE-ME"
         name: postgres
 
