Add nohoist to avoid mismatched dependencies

--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -5,6 +5,9 @@
   "author": "",
   "private": true,
   "license": "UNLICENSED",
+  "workspaces": {
+    "nohoist": ["axios-retry"]
+  },
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "tsc -p tsconfig.build.json",
