--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -65,6 +65,7 @@
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
     "csv-parse": "^4.15.1",
+    "fastify-swagger": "^4.7.0",
     "firebase-admin": "^9.0.0",
     "geo-tz": "^6.0.0",
     "geojson": "^0.5.0",
@@ -73,9 +74,9 @@
     "lodash": "^4.17.15",
     "moment": "^2.27.0",
     "moment-timezone": "^0.5.31",
-    "netcdf4": "https://github.com/parro-it/netcdf4",
     "multer": "^1.4.2",
     "multer-google-storage": "^1.3.0",
+    "netcdf4": "https://github.com/parro-it/netcdf4",
     "objects-to-csv": "^1.3.6",
     "passport": "^0.4.1",
     "passport-custom": "^1.1.1",
