--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -5,6 +5,9 @@
   "author": "",
   "private": true,
   "license": "UNLICENSED",
+  "workspaces": {
+    "nohoist": ["axios-retry"]
+  },
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "tsc -p tsconfig.build.json",
@@ -58,8 +61,8 @@
     "@nestjs/schedule": "^0.4.1",
     "@nestjs/typeorm": "^7.0.0",
     "@types/bluebird": "^3.5.32",
-    "axios": "^0.19.2",
-    "axios-retry": "^3.1.8",
+    "axios": "^0.21.1",
+    "axios-retry": "^3.1.9",
     "bluebird": "^3.7.2",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
