--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -10,7 +10,7 @@
   },
   "scripts": {
     "prebuild": "rimraf dist",
-    "build": "tsc -p tsconfig.build.json",
+    "build": "nest build -p tsconfig.build.json --tsc",
     "build:cloud-functions": "webpack-cli --config cloud-functions/webpack.config.js",
     "gcp-build": "npm install yarn",
     "predeploy:app": "mv .env .env.bkp && cp .env.${DEPLOY_ENV} .env && yarn run build && cp ../../yarn.lock .",
@@ -59,6 +59,7 @@
     "@nestjs/passport": "^7.1.0",
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/schedule": "^0.4.1",
+    "@nestjs/swagger": "^4.8.0",
     "@nestjs/typeorm": "^7.0.0",
     "@types/bluebird": "^3.5.32",
     "axios": "^0.21.1",
@@ -67,17 +68,18 @@
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
     "csv-parse": "^4.15.1",
+    "fastify-swagger": "^4.7.0",
     "firebase-admin": "^9.0.0",
     "geo-tz": "^6.0.0",
     "geojson": "^0.5.0",
-    "geotiff": "^1.0.0-beta.12",
+    "geotiff": "^1.0.4",
     "hashids": "^2.2.1",
     "lodash": "^4.17.15",
     "moment": "^2.27.0",
     "moment-timezone": "^0.5.31",
-    "netcdf4": "https://github.com/parro-it/netcdf4",
     "multer": "^1.4.2",
     "multer-google-storage": "^1.3.0",
+    "netcdf4": "https://github.com/parro-it/netcdf4",
     "objects-to-csv": "^1.3.6",
     "passport": "^0.4.1",
     "passport-custom": "^1.1.1",
@@ -85,6 +87,7 @@
     "pg-native": "^3.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^6.5.4",
+    "swagger-ui-express": "^4.1.6",
     "ts-exif-parser": "^0.2.1",
     "typeorm": "^0.2.25",
     "typeorm-naming-strategies": "^1.1.0",
