--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -6,7 +6,9 @@
   "private": true,
   "license": "UNLICENSED",
   "workspaces": {
-    "nohoist": ["axios-retry"]
+    "nohoist": [
+      "axios-retry"
+    ]
   },
   "scripts": {
     "prebuild": "rimraf dist",
@@ -16,8 +18,8 @@
     "predeploy:app": "mv .env .env.bkp && cp .env.${DEPLOY_ENV} .env && yarn run build && cp ../../yarn.lock .",
     "deploy:app": "gcloud app deploy app-${DEPLOY_ENV}.yaml && yarn migration:run",
     "postdeploy:app": "rm yarn.lock && mv .env.bkp .env",
-    "deploy:prod": "export DEPLOY_ENV=prod && yarn deploy:app && deploy:cloud-functions",
-    "deploy:staging": "export DEPLOY_ENV=staging && yarn deploy:app && deploy:cloud-functions:staging",
+    "deploy:prod": "export DEPLOY_ENV=prod && yarn deploy:app && yarn deploy:cloud-functions",
+    "deploy:staging": "export DEPLOY_ENV=staging && yarn deploy:app && yarn deploy:cloud-functions:staging",
     "deploy:programize": "export DEPLOY_ENV=programize && yarn deploy:app && yarn deploy:cloud-functions:programize",
     "deploy:cloud-functions": "yarn build:cloud-functions && firebase deploy --only functions:pingService,functions:scheduledDailyUpdate,functions:scheduledSpotterTimeSeriesUpdate,functions:scheduledSSTTimeSeriesUpdate",
     "deploy:cloud-functions:staging": "yarn build:cloud-functions && firebase deploy -P aqualink-dev --only functions:pingService,functions:scheduledDailyUpdate,functions:scheduledSpotterTimeSeriesUpdate,functions:scheduledSSTTimeSeriesUpdate",
