--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -60,6 +60,7 @@
     "react-slick": "^0.27.10",
     "react-swipeable-bottom-sheet": "^1.1.2",
     "react-swipeable-views": "^0.13.9",
+    "react-youtube": "^7.13.1",
     "redux": "^4.0.5",
     "redux-mock-store": "^1.5.4",
     "slick-carousel": "^1.8.1",
