Clean up env variables

--- a/packages/api/.env.example
+++ b/packages/api/.env.example
@@ -13,3 +13,8 @@ GCS_KEYFILE=gcloud.json
 STORAGE_FOLDER=path/in/bucket
 STORAGE_MAX_FILE_SIZE_MB=1
 TZ=UTC
+# Env variable needed for video stream check (cloud function)
+FIREBASE_KEY=
+SLACK_BOT_TOKEN=
+SLACK_BOT_CHANNEL=
+FRONT_END_BASE_URL=
