--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -21,10 +21,10 @@
     "deploy:prod": "export DEPLOY_ENV=prod && yarn deploy:app && yarn deploy:cloud-functions",
     "deploy:staging": "export DEPLOY_ENV=staging && yarn deploy:app && yarn deploy:cloud-functions:staging",
     "deploy:programize": "export DEPLOY_ENV=programize && yarn deploy:app && yarn deploy:cloud-functions:programize",
-    "deploy:cloud-functions": "yarn build:cloud-functions && yarn build:cloud-functions && firebase deploy -P ${CLOUD_DEPLOY_PROJECT_ID} --only functions:pingService,functions:scheduledDailyUpdate,functions:scheduledSpotterTimeSeriesUpdate,functions:scheduledSSTTimeSeriesUpdate,functions:scheduledVideoStreamsCheck",
-    "deploy:cloud-functions:prod": "export CLOUD_DEPLOY_PROJECT_ID='ocean-systems' && yarn deploy:cloud-functions",
-    "deploy:cloud-functions:staging": "export CLOUD_DEPLOY_PROJECT_ID='aqualink-dev' && yarn deploy:cloud-functions",
-    "deploy:cloud-functions:programize": "export CLOUD_DEPLOY_PROJECT_ID='aqualink-programize' && yarn deploy:cloud-functions",
+    "deploy:cloud-functions": "yarn build:cloud-functions && firebase deploy --only functions:pingService,functions:scheduledDailyUpdate,functions:scheduledSpotterTimeSeriesUpdate,functions:scheduledSSTTimeSeriesUpdate,functions:scheduledVideoStreamsCheck",
+    "deploy:cloud-functions:prod": "yarn deploy:cloud-functions -P ocean-systems",
+    "deploy:cloud-functions:staging": "yarn deploy:cloud-functions -P aqualink-dev",
+    "deploy:cloud-functions:programize": "yarn deploy:cloud-functions -P aqualink-programize",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "yarn run start:prod",
     "start:dev": "cp .env.local .env && nodemon --config nodemon.json",
