Update readme and create functions config script

--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -25,6 +25,10 @@
     "deploy:cloud-functions:prod": "yarn deploy:cloud-functions -P ocean-systems",
     "deploy:cloud-functions:staging": "yarn deploy:cloud-functions -P aqualink-dev",
     "deploy:cloud-functions:programize": "yarn deploy:cloud-functions -P aqualink-programize",
+    "config:cloud-functions": "firebase functions:config:set $(ts-node functionsConfig.ts)",
+    "config:cloud-functions:prod": "yarn config:cloud-functions -P ocean-systems",
+    "config:cloud-functions:staging": "yarn config:cloud-functions -P aqualink-dev",
+    "config:cloud-functions:programize": "yarn config:cloud-functions -P aqualink-programize",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "yarn run start:prod",
     "start:dev": "cp .env.local .env && nodemon --config nodemon.json",
