--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -36,7 +36,7 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/src/main.js",
     "lint": "eslint \"{src,apps,libs,test,scripts}/**/*.{ts,js}\" --max-warnings 0 --fix",
-    "test": "jest",
+    "test": "cross-env NODE_ENV=test jest --config ./test/jest.json",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
@@ -77,6 +77,7 @@
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
     "csv-parse": "^4.15.1",
+    "express": "^4.17.1",
     "fastify-swagger": "^4.7.0",
     "firebase-admin": "^9.0.0",
     "geo-tz": "^6.0.0",
@@ -106,7 +107,7 @@
     "@nestjs/cli": "^7.0.0",
     "@nestjs/schematics": "^7.0.0",
     "@nestjs/testing": "^7.0.0",
-    "@types/express": "^4.17.3",
+    "@types/express": "^4.17.13",
     "@types/faker": "^4.1.12",
     "@types/jest": "24.9.0",
     "@types/lodash": "^4.14.156",
