Update tracker screenshot

--- a/packages/api/.env.example
+++ b/packages/api/.env.example
@@ -17,7 +17,7 @@ GOOGLE_MAPS_API_KEY=
 STORAGE_MAX_FILE_SIZE_MB=1
 TZ=UTC
 # Env variable needed for video stream check (cloud function)
-FIREBASE_KEY=
+FIREBASE_API_KEY=
 SLACK_BOT_TOKEN=
 SLACK_BOT_CHANNEL=
 FRONT_END_BASE_URL=
