--- a/package.json
+++ b/package.json
@@ -20,27 +20,27 @@
     "publish:release": "lerna publish --force-publish=* --no-push --no-git-tag-version"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^2.0",
-    "@typescript-eslint/parser": "^2.0",
+    "typescript": "^4.3.5",
+    "@typescript-eslint/eslint-plugin": "^4.29.0",
+    "@typescript-eslint/parser": "^4.29.0",
     "babel-eslint": "^10.1.0",
     "cross-spawn": "^7.0.02",
-    "eslint": "^6.8.0",
+    "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-config-prettier": "^6.11.0",
-    "eslint-config-react-app": "^5.2.1",
-    "eslint-import-resolver-typescript": "^2.0.0",
-    "eslint-plugin-flowtype": "^4.0",
+    "eslint-config-react-app": "^6.0.0",
+    "eslint-import-resolver-typescript": "^2.4.0",
+    "eslint-plugin-flowtype": "^5.2.0",
     "eslint-plugin-fp": "^2.3.0",
-    "eslint-plugin-import": "^2.21.1",
+    "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.3",
-    "eslint-plugin-react": "^7.20.0",
-    "eslint-plugin-react-hooks": "^2.5",
+    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^4.2.5",
     "lerna": "^3.22.0",
     "lint-staged": "^10.2.9",
-    "prettier": "^2.0.5",
-    "typescript": "~3.8.2"
+    "prettier": "^2.0.5"
   },
   "engines": {
     "node": "12.x",
