--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,11 +3,15 @@
 # Check https://circleci.com/docs/2.0/language-javascript/ for more details
 
 version: 2.1
+references:
+  working_directory: &working_directory ~/repo
+orbs:
+  jest: blimmer/jest@0.2.1
 executors:
   default:
     docker:
       - image: node:12
-        environment: 
+        environment:
           DATABASE_URL: postgres://postgres:CHANGE-ME@postgres:5432/postgres
           TEST_DATABASE_URL: postgres://postgres:CHANGE-ME@postgres:5432/postgres
 
@@ -26,9 +30,10 @@ commands:
           name: Install psql
           command: apt-get update && apt-get install -y postgresql-client
 
-  restore_dependencies:
-    description: Restore project dependencies from cache
+  checkout_and_restore_dependencies:
+    description: Fetch code from github and restore project dependencies from cache
     steps:
+      - checkout
       # Download and cache dependencies
       - restore_cache:
           keys:
@@ -38,12 +43,11 @@ commands:
 
 jobs:
   build_dependencies:
-    working_directory: ~/repo
+    working_directory: *working_directory
     executor: default
 
     steps:
-      - checkout  
-      - restore_dependencies
+      - checkout_and_restore_dependencies
 
       - run: yarn install --ignore-engines
       - run:
@@ -58,55 +62,38 @@ jobs:
             - /usr/local/share/.cache/yarn/v4/
           key: v3-dependencies-{{ checksum "yarn.lock" }}
 
-  test_api:
-    working_directory: ~/repo
+  test_and_lint:
+    working_directory: *working_directory
     executor: default
 
     steps:
-      - checkout
-      - restore_dependencies
+      - checkout_and_restore_dependencies
       - install_psql
 
       # Ensure that all migrations succeed
       - run: cd packages/api && yarn migration:run
 
-      - restore_cache:
-          keys:
-            - v1-test
+      # Restore api jest cache
+      - jest/restore-cache:
+          jest-cache-location: packages/api/.jest-cache
 
       # Run tests
-      - run: cd packages/api && yarn test
+      - run: yarn test
 
       # Save test cache
-      - save_cache:
-          paths: packages/api/.jest-cache
-          key: v1-test
+      - jest/save_cache:
+          jest-cache-location: packages/api/.jest-cache
 
       # Run lint
-      - run: cd packages/api && yarn lint
-  
-  test_web:
-    working_directory: ~/repo
-    executor: default
-
-    steps:
-      - checkout
-      - restore_dependencies
-      
-      # Run tests
-      - run: cd packages/website && yarn test
-
-      # Run lint
-      - run: cd packages/website && yarn lint
+      - run: yarn lint:all
 
   build_app:
-    working_directory: ~/repo
+    working_directory: *working_directory
     executor: default
 
     steps:
-      - checkout
-      - restore_dependencies
-          
+      - checkout_and_restore_dependencies
+
       # Ensure that a normal build succeeds
       - run: yarn build
       - run: cd packages/api && yarn build:cloud-functions
@@ -116,15 +103,10 @@ workflows:
   build:
     jobs:
       - build_dependencies
-      - test_api:
-          requires:
-            - build_dependencies
-
-      - test_web:
+      - test_and_lint:
           requires:
             - build_dependencies
 
       - build_app:
           requires:
-            - test_api
-            - test_web
+            - build_dependencies
