--- a/packages/website/firebase.json
+++ b/packages/website/firebase.json
@@ -9,6 +9,13 @@
           "source": "**",
           "destination": "/index.html"
         }
+      ],
+      "redirects": [
+        {
+          "source": "/reefs/:site_id",
+          "destination": "/sites/:site_id",
+          "type": 301
+        }
       ]
     },
     {
@@ -30,6 +37,13 @@
         {
           "source": "**",
           "destination": "/index.html"
+        }
+      ],
+      "redirects": [
+        {
+          "source": "/reefs/:site_id",
+          "destination": "/sites/:site_id",
+          "type": 301
         }
       ]
     }
