Add redirects to staging

--- a/packages/website/firebase.json
+++ b/packages/website/firebase.json
@@ -27,6 +27,13 @@
           "source": "**",
           "destination": "/index.html"
         }
+      ],
+      "redirects": [
+        {
+          "source": "/reefs/:site_id",
+          "destination": "/sites/:site_id",
+          "type": 301
+        }
       ]
     },
     {
