--- a/packages/api/.env.example
+++ b/packages/api/.env.example
@@ -13,6 +13,7 @@ GCS_BUCKET=
 GCS_KEYFILE=gcloud.json
 STORAGE_FOLDER=path/in/bucket
 SOFAR_API_TOKEN=
+STORMGLASS_API_KEY=
 GOOGLE_MAPS_API_KEY=
 STORAGE_MAX_FILE_SIZE_MB=1
 TZ=UTC
