--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "cross-env EXTEND_ESLINT=true react-scripts start",
     "build": "cross-env EXTEND_ESLINT=true react-scripts build",
+    "postbuild": "react-snap",
     "test": "react-scripts --expose-gc test --logHeapUsage --maxWorkers=2",
     "eject": "react-scripts eject",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx ./src --ignore-path .gitignore --max-warnings 0",
@@ -49,6 +50,7 @@
     "react-dom": "^16.13.1",
     "react-dropzone": "^11.0.3",
     "react-ga": "^3.1.2",
+    "react-helmet": "^6.1.0",
     "react-hook-form": "^6.0.8",
     "react-leaflet": "^2.7.0",
     "react-leaflet-markercluster": "^2.0.0",
@@ -57,6 +59,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "^4.0.3",
     "react-slick": "^0.27.10",
+    "react-snap": "https://github.com/echaidemenos/react-snap",
     "react-swipeable-bottom-sheet": "^1.1.2",
     "react-swipeable-views": "^0.13.9",
     "redux": "^4.0.5",
@@ -95,6 +98,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-helmet": "^6.1.5",
     "@types/react-leaflet": "^2.5.1",
     "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.3",
