Add NOAA_AVAILABILITY_URL to .env.example

--- a/packages/api/.env.example
+++ b/packages/api/.env.example
@@ -17,6 +17,7 @@ STORMGLASS_API_KEY=
 GOOGLE_MAPS_API_KEY=
 STORAGE_MAX_FILE_SIZE_MB=1
 TZ=UTC
+NOAA_AVAILABILITY_URL=
 # Env variable needed for video stream check (cloud function)
 FIREBASE_API_KEY=
 SLACK_BOT_TOKEN=
