WIP: Add hui upload script

--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -59,6 +59,7 @@
     "augment-sites": "ts-node -r dotenv/config scripts/augment-site-data.ts",
     "upload-hobo-data": "ts-node -r dotenv/config scripts/upload-hobo-data.ts",
     "upload-sonde-data": "ts-node -r dotenv/config scripts/upload-sonde-data.ts",
+    "upload-hui-data": "ts-node -r dotenv/config scripts/upload-hui-data.ts",
     "backfill-sofar-time-series": "ts-node -r dotenv/config scripts/backfill-sofar-time-series.ts",
     "update-wind-wave-data": "ts-node -r dotenv/config scripts/hindcast-wind-wave-data.ts",
     "resize-survey-images": "ts-node -r dotenv/config scripts/resize-survey-images.ts",
@@ -76,6 +77,7 @@
     "@nestjs/swagger": "^4.8.0",
     "@nestjs/typeorm": "^7.0.0",
     "@turf/boolean-point-in-polygon": "^6.5.0",
+    "@turf/clusters-dbscan": "^6.5.0",
     "@turf/nearest-point": "^6.5.0",
     "@types/bluebird": "^3.5.32",
     "@types/node-xlsx": "^0.15.3",
