Remove --fix flag from lint

--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -35,7 +35,7 @@
     "start:dev:db": "docker-compose up",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/src/main.js",
-    "lint": "eslint \"{src,apps,libs,test,scripts}/**/*.{ts,js}\" --max-warnings 0 --fix",
+    "lint": "eslint \"{src,apps,libs,test,scripts}/**/*.{ts,js}\" --max-warnings 0",
     "test": "cross-env NODE_ENV=test jest --config ./test/jest.json --silent",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
