--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -42,9 +42,9 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "typeorm": "ts-node $(yarn bin typeorm) -d ormconfig.ts",
-    "migration:generate": "yarn typeorm migration:generate -d ormconfig.ts",
-    "migration:run": "yarn typeorm migration:run -t each -d ormconfig.ts",
-    "migration:revert": "yarn typeorm migration:revert -d ormconfig.ts",
+    "migration:generate": "yarn typeorm migration:generate",
+    "migration:run": "yarn typeorm migration:run -t each",
+    "migration:revert": "yarn typeorm migration:revert",
     "hashId": "ts-node -r dotenv/config scripts/url-hash.ts toHash",
     "hashId:prod": "DOTENV_CONFIG_PATH=.env.prod ts-node -r dotenv/config scripts/url-hash.ts toHash",
     "hashId:staging": "DOTENV_CONFIG_PATH=.env.staging ts-node -r dotenv/config scripts/url-hash.ts toHash",
