Add node version to build_dependencies

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,6 +29,11 @@ jobs:
           path: node_modules
           key: v6-dependencies-${{ hashFiles('yarn.lock') }}
 
+      - name: Use Node.js 16.x
+        uses: actions/setup-node@v2
+        with:
+          node-version: '16.x'
+
       - name: Install psql
         run: sudo apt-get update && sudo apt-get install -y postgresql-client
 
